guestbook/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guestbook
    tier: frontend
  name: frontend
spec:
  ports:
    - port: 80
  selector:
    app: guestbook
    tier: frontend
  type: NodePort
