guestbook/redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    role: master
    tier: backend
  name: redis-master
spec:
  ports:
    - port: 6379
  selector:
    app: redis
    role: master
    tier: backend
