guestbook/redis-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    role: slave
    tier: backend
  name: redis-slave
spec:
  ports:
    - port: 6379
  selector:
    app: redis
    role: slave
    tier: backend
